--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,4 +27,8 @@ build_script:
     -X github.com/docker/cli/cli.Version=%VERSION%
     -X github.com/docker/cli/cli.GitCommit=%GITCOMMIT%
     -X github.com/docker/cli/cli.BuildTime=%BUILDTIME%"
-    -o %GOPATH%\src\github.com\docker\cli\build\docker.exe
+    -o c:\projects\docker-cli-binary\docker.exe
+
+artifacts:
+  - path: docker.exe
+    name: Docker CLI
