--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,14 +33,14 @@ build_script:
 
 after_build:
   - "%APPVEYOR_BUILD_FOLDER%\\docker.exe --version"
-  - 7z a %APPVEYOR_BUILD_FOLDER%\docker.exe.7z %APPVEYOR_BUILD_FOLDER%\docker.exe
+  - 7z a %APPVEYOR_BUILD_FOLDER%\docker-v%DOCKER_VERSION%.7z %APPVEYOR_BUILD_FOLDER%\docker.exe
   - ps: |
-      $env:ARTIFACT_HASH = (Get-FileHash -Algorithm SHA256 $env:APPVEYOR_BUILD_FOLDER\docker.exe.7z).Hash
+      $env:ARTIFACT_HASH = (Get-FileHash -Algorithm SHA256 $env:APPVEYOR_BUILD_FOLDER\docker-v$env:DOCKER_VERSION.7z).Hash
       $env:ARTIFACT_HASH | Out-File -Encoding ascii -File $env:APPVEYOR_BUILD_FOLDER\docker.exe.7z.sha256
 
 artifacts:
-  - path: docker.exe.7z
-    name: Docker CLI
+  - path: docker-v$(DOCKER_VERSION).7z
+    name: Docker CLI archive
   - path: docker.exe.7z.sha256
     name: SHA256 hash of Docker CLI
 
@@ -52,12 +52,12 @@ deploy:
 
       Built https://github.com/docker/cli at commit `$(GITCOMMIT_FULL)`.
 
-      | File          | SHA-256 sum |
-      | ---           | ---         |
-      | docker.exe.7z | `$(ARTIFACT_HASH)` |
+      | File                         | SHA-256 sum |
+      | ---                          | ---         |
+      | docker-v$(DOCKER_VERSION).7z | `$(ARTIFACT_HASH)` |
     auth_token:
       secure: Jfjhx7TC03brqWcw+uUMXHJxj445SVeEcmSnDUV10ggRuU6UlzQMLSVGIBRqWD8v
-    artifact: docker.exe.7z,docker.exe.7z.sha256
+    artifact: docker-v$(DOCKER_VERSION).7z,docker.exe.7z.sha256
     on:
       branch: master
       appveyor_repo_tag: true
