--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,9 +29,9 @@ build_script:
   - >
     go build -v -tags "autogen"
     -ldflags "-linkmode=internal
-    -X github.com/docker/cli/cli.Version=%VERSION%
-    -X github.com/docker/cli/cli.GitCommit=%GITCOMMIT%
-    -X github.com/docker/cli/cli.BuildTime=%BUILDTIME%"
+    -X github.com/docker/cli/cli/version.Version=%VERSION%
+    -X github.com/docker/cli/cli/version.GitCommit=%GITCOMMIT%
+    -X github.com/docker/cli/cli/version.BuildTime=%BUILDTIME%"
     -o %APPVEYOR_BUILD_FOLDER%\docker.exe
 
 after_build:
