--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,9 +48,10 @@ jobs:
       - name: Archive
         id: archive
         run: |
-          7z a build\docker-v${{ env.DOCKER_VERSION }}.7z build\docker.exe
-          $ARTIFACT_HASH = (Get-FileHash -Algorithm SHA256 build\docker-v${{ env.DOCKER_VERSION }}.7z).Hash
-          "$ARTIFACT_HASH  docker-v${{ env.DOCKER_VERSION }}.7z"| Out-File -Encoding ascii -File build\sha256sum.txt
+          cd build
+          7z a docker-v${{ env.DOCKER_VERSION }}.7z docker.exe
+          $ARTIFACT_HASH = (Get-FileHash -Algorithm SHA256 docker-v${{ env.DOCKER_VERSION }}.7z).Hash
+          "$ARTIFACT_HASH  docker-v${{ env.DOCKER_VERSION }}.7z"| Out-File -Encoding ascii -File sha256sum.txt
           Write-Output "::set-output name=hash::$ARTIFACT_HASH"
 
       - name: Create Release
